Add teams table and separate leaderboard members and teams into models
